--- a/Парсинг coinmarketcap.com.ipynb
+++ b/Парсинг coinmarketcap.com.ipynb
@@ -8,8 +8,7 @@
    "source": [
     "'''Пример парсера coinmarketcap.com в несколько процессов (multiprocess)\n",
     "Сейчас этот паресер не работает т.к. на сайте висит защита cloudflare от ddos.\n",
-    "Но автор говорит, что если подкрутить кое-в-каких местах, то должно прокатывать.\n",
-    "Взято в качестве примера по методологии самого парсинга'''"
+    "Но, если подкрутить кое-в-каких местах, то должно прокатывать.\n" '''"
    ]
   },
   {
@@ -18,7 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Кстати у него есть прошлые видосы, где он показывает парсинг в один процесс'''\n",
+    
     "'''API - легальный способ получить данные без парсинга. Так что смотри сначала,\n",
     "может там есть API и выдачи с него тебе будет достаточно?\n",
     "А вообще за такой парсинг могут забанить к хуям, так, что запускать этот код не рекомендую.'''"
@@ -106,8 +105,8 @@
     "#вспоминаем. что find - это найти первое попавшееся значение, а find_all - все значения по заданному условию\n",
     "    links - []\n",
     "    for td in tds:\n",
-    "        a = td.find('a').get('href')# в объекте супа td находим тег a с атрибутом href.Это будет обрубок ссылки (без домена)\n",
-    "        domen ='https://coinmarketcap.com/' #а это сам домен с которым будет склеивать обрубок\n",
+    "        a = td.find('a').get('href')# в объекте супа td находим тег a с атрибутом href.Это будет урл ссылки (без домена)\n",
+    "        domen ='https://coinmarketcap.com/' #а это сам домен с которым будет склеивать урл\n",
     "        link = domen + a #конкатенация\n",
     "        links.append(link) # Положили ссылочку в список links\n",
     "    return links# на выходе работы функции получаем список со ссылками\n"
@@ -141,9 +140,9 @@
    "outputs": [],
    "source": [
     "# В этом блоке запишем все в csv. Заметь, что для этого нам не надо\n",
-    "#импортировать всю Панду - достаточно встроенного метода csv. смотрии в главном модуле\n",
+    "#импортировать всю Панду - достаточно встроенного метода csv. смотри в главном модуле\n",
     "def write_csv(data):\n",
-    "    with open('coinmarketcap.csv', 'a') as f:# а - это значит добавить в конец. Легко зхапомнить. т.к. это сокращение от append\n",
+    "    with open('coinmarketcap.csv', 'a') as f:# а - это значит добавить в конец. Легко запомнить. т.к. это сокращение от append\n",
     "        writer = csv.writer(f)\n",
     "        writer.writerow( (data['name'],\n",
     "                              ['price']))#тут как бы говорим, что надо записать в строку наш словарик имя-цена\n",
@@ -169,7 +168,7 @@
     "import requests\n",
     "from  bs4 import BeautifulSoup\n",
     "import csv\n",
-    "from datetime import datetime #это чтобы засекать время работы парсера над каждоым альткоином\n",
+    "from datetime import datetime #это чтобы засекать время работы парсера над каждым альткоином\n",
     "from multiprocessing import Pool #это чтобы парсить в несколько потоков\n",
     "\n",
     "# Создаем точку входа (она вроде как и не пригодилась нигде)\n",
@@ -189,7 +188,7 @@
     "        #write_csv(data)# получается, что это цикл, каскадно запускающий все эти функции работает внутри самой функции get_all_links\n",
     "        #print(index)#выводит порядковый номер монеты\n",
     "    with Pool(40) as p: #40-это кол-во процессов python. По идее их столько будет в диспетчере задач\n",
-    "        p.map(make_all, all_links) #make_all пишется без скобок т.к. здесь не результат работы функции. а сама функция\n",
+    "        p.map(make_all, all_links) #make_all пишется без скобок т.к. здесь не результат работы функции, а сама функция\n",
     "         \n",
     "    end =  datetime.now() #засекаем время конца парсинга\n",
     "    total = end-start\n",
@@ -213,8 +212,8 @@
     "#вспоминаем. что find - это найти первое попавшееся значение, а find_all - все значения по заданному условию\n",
     "    links - []\n",
     "    for td in tds:\n",
-    "        a = td.find('a').get('href')# в объекте супа td находим тег a с атрибутом href.Это будет обрубок ссылки (без домена)\n",
-    "        domen ='https://coinmarketcap.com/' #а это сам домен с которым будет склеивать обрубок\n",
+    "        a = td.find('a').get('href')# в объекте супа td находим тег a с атрибутом href.Это будет урл ссылки (без домена)\n",
+    "        domen ='https://coinmarketcap.com/' #а это сам домен с которым будет склеивать урл\n",
     "        link = domen + a #конкатенация\n",
     "        links.append(link) # Положили ссылочку в список links\n",
     "    return links# на выходе работы функции получаем список со ссылками\n",
@@ -236,7 +235,7 @@
     "# В этом блоке запишем все в csv. Заметь, что для этого нам не надо\n",
     "#импортировать всю Панду - достаточно встроенного метода csv. смотрии в главном модуле\n",
     "def write_csv(data):\n",
-    "    with open('coinmarketcap.csv', 'a') as f:# а - это значит добавить в конец. Легко зхапомнить. т.к. это сокращение от append\n",
+    "    with open('coinmarketcap.csv', 'a') as f:# а - это значит добавить в конец. Легко запомнить. т.к. это сокращение от append\n",
     "        writer = csv.writer(f)\n",
     "        writer.writerow( (data['name'],\n",
     "                              ['price']))#тут как бы говорим, что надо записать в строку наш словарик имя-цена\n",
