--- a/Парсер coinmarketcap.com.ipynb
+++ b/Парсер coinmarketcap.com.ipynb
@@ -6,10 +6,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "'''Пример парсера coinmarketcap.com в несколько процессов (multiprocess)\n",
+    "'''Парсер coinmarketcap.com в несколько процессов (multiprocess)\n",
     "Сейчас этот паресер не работает т.к. на сайте висит защита cloudflare от ddos.\n",
     "Но если подкрутить кое-в-каких местах, то должно прокатывать.\n",
-    "Как пример по методологии самого парсинга'''"
+    "Реализовано в однопоточном и многопоточном вариантах'''"
    ]
   },
   {
