--- a/Парсер coinmarketcap.com.ipynb
+++ b/Парсер coinmarketcap.com.ipynb
@@ -7,9 +7,9 @@
    "outputs": [],
    "source": [
     "'''Парсер coinmarketcap.com в несколько процессов (multiprocess)\n",
-    "Сейчас этот паресер не работает т.к. на сайте висит защита cloudflare от ddos.\n",
+    "Сейчас этот парсер не работает т.к. на сайте висит защита cloudflare от ddos.\n",
     "Но если подкрутить кое-в-каких местах, то должно прокатывать.\n",
-    "Реализовано в однопоточном и многопоточном вариантах'''"
+    "Используйте хорошие прокси'''"
    ]
   },
   {
