Update and rename Парсинг lamptest.ipynb to Парсер lamptest.ipynb

--- a/Парсер lamptest.ipynb
+++ b/Парсер lamptest.ipynb
@@ -809,7 +809,7 @@
     "from tqdm import tqdm_notebook #это прогресс бар. его можно и не использовать, так для красоты только\n",
     "pagination = []\n",
     "x=0\n",
-    "for page in tqdm_notebook(range(0, 1000,50), desc = 'Page loop'):# формируем урд пагинации в цикле. desc - это название прогресс бара\n",
+    "for page in tqdm_notebook(range(0, 1000,50), desc = 'Page loop'):# формируем урл пагинации в цикле. desc - это название прогресс бара\n",
     "    #строка выше - (range(0, 3000,50) это перебор от 0 до 3000 с шагом 50\n",
     "    temp_df = pd.DataFrame(columns = params_list) #создается дф, где колонки - список из params_list\n",
     "    url = f'http://lamptest.ru/search/#currency=rub&type=LED&start={page}'#здесь получаем готовый урл\n",
