--- a/Парсер lamptest.ipynb
+++ b/Парсер lamptest.ipynb
@@ -826,7 +826,7 @@
     "    temp_df = temp_df.reset_index(drop=True)# если не сделать резет индекса, то не будет работать конкат\n",
     "    df = pd.concat([df, temp_df],verify_integrity=False)\n",
     "    if df.shape[0] != x:\n",
-    "        break #добвил это условие, чтобы цикл вырубался, если последняя страница не добавилась.\n",
+    "        break #добавил это условие, чтобы цикл вырубался, если последняя страница не добавилась.\n",
     "df.reset_index(inplace=True, drop=True) #пересчитаем индекс заново"
    ]
   },
